Prevent hover effect on mobile
The hover effect remains sticky on tap.
This causes the button to remain highlighted.

--- a/src/theme/_appbar.scss
+++ b/src/theme/_appbar.scss
@@ -45,6 +45,13 @@ $appbar__spacing: 8 * $unit;
     }
 }
 
+@media (hover: none) {
+    .appbar__action:hover {
+        background-color: transparent;
+        color: $white;
+    }
+}
+
 #root {
     padding: $appbar__spacing $subunit 0 * $unit;
 }
